Finished product crud, order and shipping

--- a/Resources/views/admin/dashboard.html.twig
+++ b/Resources/views/admin/dashboard.html.twig
@@ -48,6 +48,12 @@
                     </a>
                 </li>
                 <li class="nav-item ">
+                    <a class="nav-link" href="{{ path('admin_dashboard_orders') }}">
+                        <i class="material-icons">inventory</i>
+                        <p>Orders</p>
+                    </a>
+                </li>
+                <li class="nav-item ">
                     <a class="nav-link" href="./tables.html">
                         <i class="material-icons">content_paste</i>
                         <p>Table List</p>
