--- a/Resources/views/admin/product/edit.html.twig
+++ b/Resources/views/admin/product/edit.html.twig
@@ -47,7 +47,7 @@
                         <p>Products</p>
                     </a>
                 </li>
-                <li class="nav-item ">
+                <li class="nav-item active">
                     <a class="nav-link" href="{{ path('admin_dashboard_orders') }}">
                         <i class="material-icons">inventory</i>
                         <p>Orders</p>
@@ -168,86 +168,70 @@
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
-
-                    <div class="col-md-12">
-                        <div class="card card-plain">
+                    <div class="col-md-8">
+                        <div class="card">
                             <div class="card-header card-header-primary">
-                                <h4 class="card-title mt-0">Products</h4>
-                                <p class="card-category">You can manage your products here</p>
-                                <a href="{{ path('admin_dashboard_create_products') }}">
-                                <button class="btn btn-warning pull-left">Create Products</button>
-                                </a>
+                                <h4 class="card-title">Edit Profile</h4>
+                                <p class="card-category">Complete your profile</p>
                             </div>
                             <div class="card-body">
-                                <div class="table-responsive">
-                                    <table class="table table-hover">
-                                        <thead class="">
-                                        <th>
-                                            ID
-                                        </th>
-                                        <th>
-                                            Name
-                                        </th>
-                                        <th>
-                                            Price
-                                        </th>
-                                        <th>
-                                            Created At
-                                        </th>
-                                        <th>
-                                            Updated At
-                                        </th>
-                                        <th>
-                                            Published
-                                        </th>
-                                        <th>
-                                            Actions
-                                        </th>
-                                        </thead>
-                                        <tbody>
-                                        {% for products in products %}
-                                        <tr>
-                                            <td>
-                                                {{products.id }}
-                                            </td>
-                                            <td>
-                                                {{products.name }}
-                                            </td>
-                                            <td>
-                                                {{products.price }}
-                                            </td>
-                                            <td>
-                                                {{products.created| date }}
-                                            </td>
-                                            <td>
-                                                {{products.updated| date }}
-                                            </td>
-                                            <td>
-                                               {% if products.isPublished==true %}
-                                                Published
-                                                {% else %}
-                                                Not Published
-                                                {% endif %}
-                                            </td>
-                                            <td>
-                                                <a href="  {{ path('admin_dashboard_delete_product',{'id':products.id}) }}">
-                                                    <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">
-                                                        <i class="material-icons">close</i>
+                                {{ form_start(form) }}
 
-                                                    </button>
-                                                </a>
-                                                <a href="  {{ path('admin_dashboard_edit_product',{'id':products.id}) }}">
-                                                    <button type="button" rel="tooltip" title="Edit Product" class="btn btn-info btn-link btn-sm">
-                                                        <i class="material-icons">edit</i>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="bmd-label-floating">Product name</label>
 
-                                                    </button>
-                                                </a>
-                                            </td>
-                                        </tr>
-                                 {% endfor %}
-                                        </tbody>
-                                    </table>
+                                        </div>
+
+                                        {{ form_widget(form.name,{'attr':{'type':'text','class':'form-control','placeholder':'Product name'}}) }}
+                                    </div>
+
+                                    <div class="col-md-2">
+                                        <div class="form-group">
+                                            <label class="bmd-label-floating">Product slug</label>
+
+                                        </div>
+
+                                        {{ form_widget(form.slug,{'attr':{'type':'text','class':'form-control','placeholder':'slug'}}) }}
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="bmd-label-floating">Product price</label>
+
+                                        </div>
+
+                                        {{ form_widget(form.price,{'attr':{'type':'number','class':'form-control','placeholder':'Product price'}}) }}
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="bmd-label-floating">Product price</label>
+
+                                        </div>
+
+                                        {{ form_widget(form.description,{'attr':{'type':'textarea','class':'form-control','placeholder':'Product description'}}) }}
+                                    </div>
+                                    {{ form_widget(form.Save,{'attr':{'type':'submit', 'class':'btn btn-primary pull-left'}}) }}
+
                                 </div>
+
+                                {{ form_end(form) }}
+
+                                <div class="clearfix"></div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card card-profile">
+
+                            <div class="card-body">
+                                <h4 class="card-title">{{ product.name }}</h4>
+                                <h6 class="card-category text-gray">{{ product.slug }}</h6>
+
+                                <p class="card-description">
+                                    {{ product.description }}
+                                         </p>
                             </div>
                         </div>
                     </div>
